# ollama_gen

./: CMakeLists.txt  LICENSE  README.md  mx2-ollama.cpp  mx2-ollama.hpp  ollama_gen-config.cmake.in
chat/: CMakeLists.txt  chat.cpp
chat_unix/: CMakeLists.txt  README.md  chat.cpp  index.html
example/: CMakeLists.txt  code.cpp
